# exek

./: CLAUDE.md  Cargo.toml  Makefile  README.md  SETUP.md  install.sh
config/: exek.desktop
config/i3/: config
config/tmux/: tmux.conf
scripts/: exek-debug.sh  exek-dmenu-compat.sh  exek-i3.sh  exek-launcher.sh
src/: database.rs  desktop_entry.rs  main.rs  path_completion.rs  search.rs  ui.rs
