[package]
name = "exek"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
shellexpand = "3.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
which = "7.0"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
